--- a/Training/PythonWebServer/index.html
+++ b/Training/PythonWebServer/index.html
@@ -8,6 +8,37 @@
     <script src="/resources/index.js" type="text/javascript"></script>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div class="buttonContainer">
+        <button id="updateButton">Update</button>
+    </div>
+    <div class="information">
+        <div class="infoBox">
+            <div class="data">
+                <span>Time: </span>
+                <span id="currentTime"></span>
+            </div>
+        </div>
+        <div class="infoBox">
+            <div class="data">
+                <span>Total CPUs: </span>
+                <span id="totalCpu"></span>
+            </div>
+            <div class="data">
+                <span>CPU Usage: </span>
+                <span id="cpuUsage"></span>
+            </div>
+        </div>
+
+        <div class="infoBox">
+            <div class="data">
+                <span>Total RAM: </span>
+                <span id="totalRam"></span>
+            </div>
+            <div class="data">
+                <span>Used RAM: </span>
+                <span id="usedRam"></span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
