--- a/Training/PythonWebServer/index.html
+++ b/Training/PythonWebServer/index.html
@@ -6,6 +6,7 @@
     <link href="/resources/stylesheet.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/resources/index.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
     <div class="buttonContainer">
